--- a/notebooks/kids_qso_x_cmb.ipynb
+++ b/notebooks/kids_qso_x_cmb.ipynb
@@ -29,6 +29,7 @@
     "import healpy as hp\n",
     "import pymaster as nmt\n",
     "\n",
+    "sys.path.append('..')\n",
     "from env_config import DATA_PATH\n",
     "from utils import *\n",
     "from data import *\n",
@@ -339,6 +340,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.8"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
