--- a/notebooks/Stolzner_NVSS_2018.ipynb
+++ b/notebooks/Stolzner_NVSS_2018.ipynb
@@ -22,7 +22,7 @@
     "import os\n",
     "import math\n",
     "\n",
-    "import yaml\n",
+    "import yamlt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
