--- a/notebooks/Alonso_LoTSS_2020.ipynb
+++ b/notebooks/Alonso_LoTSS_2020.ipynb
@@ -6,6 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "%matplotlib inline \n",
     "\n",
     "import sys\n",
@@ -23,12 +33,12 @@
     "\n",
     "sys.path.append('..')\n",
     "from experiment import Experiment, show_mcmc_report\n",
-    "from plotting import plot_hetdex_image, plot_cmb_lensing_hetdex, plot_correlation"
+    "from plotting import plot_hetdex_image, plot_correlation"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +144,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9241bc3e6214c23937d698ce6ac365b",
+       "model_id": "ec10ccc311c1496db2157c8cfbd2b1bf",
        "version_major": 2,
        "version_minor": 0
       },
