get config and print corr stats functions

--- a/notebooks/LoTSS_DR2.ipynb
+++ b/notebooks/LoTSS_DR2.ipynb
@@ -35,6 +35,7 @@
     "from tqdm.notebook import tqdm\n",
     "\n",
     "sys.path.append('..')\n",
+    "from utils import get_config\n",
     "from experiment import Experiment, show_mcmc_report, run_experiments\n",
     "from plotting import my_mollview, plot_correlation_matrix, plot_correlation, plot_many_data_correlations"
    ]
@@ -89,9 +90,7 @@
     }
    ],
    "source": [
-    "with open('../configs.yml', 'r') as config_file:\n",
-    "    config = yaml.full_load(config_file)\n",
-    "config = config['LoTSS_DR2']\n",
+    "config = get_config('LoTSS_DR2')\n",
     "display(config)"
    ]
   },
@@ -120,7 +119,7 @@
       "  warnings.warn(\"ORDERING = {0:s} in fits file\".format(ordering))\n",
       "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/fitsfunc.py:428: UserWarning: INDXSCHM = IMPLICIT\n",
       "  warnings.warn(\"INDXSCHM = {0:s}\".format(schm))\n",
-      "../utils.py:128: RuntimeWarning: invalid value encountered in true_divide\n",
+      "../utils.py:129: RuntimeWarning: invalid value encountered in true_divide\n",
       "  mean_map /= n_obj_map\n",
       "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/fitsfunc.py:391: UserWarning: NSIDE = 2048\n",
       "  warnings.warn(\"NSIDE = {0:d}\".format(nside))\n",
@@ -168,8 +167,7 @@
     }
    ],
    "source": [
-    "print('sigma', experiment.sigmas)\n",
-    "print('chi squared', experiment.chi_squared)"
+    "experiment.print_correlation_statistics()"
    ]
   },
   {
@@ -232,49 +230,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'sigma'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'gg': 15.535871066797538, 'gt': 5.16349997676901}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'chi squared'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'gg': 290.7795917245805, 'gt': 0.07523674406883671}"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C_gg sigma: 15.54\n",
+      "C_gg chi squared: 290.78\n",
+      "C_gt sigma: 5.16\n",
+      "C_gt chi squared: 0.08\n"
+     ]
     }
    ],
    "source": [
-    "display('sigma', experiment.sigmas)\n",
-    "display('chi squared', experiment.chi_squared)"
+    "experiment.print_correlation_statistics()"
    ]
   },
   {
