--- a/notebooks/LoTSS_DR1.ipynb
+++ b/notebooks/LoTSS_DR1.ipynb
@@ -66,8 +66,8 @@
      "data": {
       "text/plain": [
        "{'lss_survey_name': 'LoTSS_DR1',\n",
-       " 'is_optical': False,\n",
-       " 'flux_min_cut': 2,\n",
+       " 'is_optical': True,\n",
+       " 'flux_min_cut': 1,\n",
        " 'nside': 512,\n",
        " 'z_tail': 2.0,\n",
        " 'bias': 2.1,\n",
@@ -101,8 +101,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original LoTSS DR1 datashape: (325694, 29)\n",
-      "Total flux of S > 2 mJy: (62958, 29)\n"
+      "Original LoTSS DR1 datashape: (318520, 119)\n",
+      "Total flux of S > 1 mJy: (115117, 119)\n"
      ]
     },
     {
@@ -138,7 +138,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a106c5f53d8b4434ab7f10c546d82367",
+       "model_id": "0fa998123c3f4fb9896db92c0baca42b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +152,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f6671b87e71044a996cc07d94477053e",
+       "model_id": "9eee0dd0fac04338becb4b1d30e83037",
        "version_major": 2,
        "version_minor": 0
       },
@@ -820,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data"
+    "# Maps"
    ]
   },
   {
