pointing noise maps

--- a/notebooks/LoTSS_DR1.ipynb
+++ b/notebooks/LoTSS_DR1.ipynb
@@ -67,15 +67,14 @@
       "text/plain": [
        "{'lss_survey_name': 'LoTSS_DR1',\n",
        " 'is_optical': True,\n",
-       " 'flux_min_cut': 1,\n",
+       " 'flux_min_cut': 0.5,\n",
        " 'nside': 512,\n",
        " 'z_tail': 2.0,\n",
        " 'bias': 2.1,\n",
        " 'scale_bias': True,\n",
        " 'cosmology_name': 'planck',\n",
        " 'cosmology_matter_power_spectrum': 'halofit',\n",
-       " 'correlation_symbols': ['gg', 'gk'],\n",
-       " 'l_max': {'gg': None, 'gk': None},\n",
+       " 'l_range': {'gg': [2, 502], 'gk': [2, 502]},\n",
        " 'ells_per_bin': {'gg': 50, 'gk': 50},\n",
        " 'starting_params': {'bias': [2.1, 0.5], 'sigma8': [0.83, 0.1]},\n",
        " 'n_walkers': 32,\n",
@@ -102,7 +101,7 @@
      "output_type": "stream",
      "text": [
       "Original LoTSS DR1 datashape: (318520, 119)\n",
-      "Total flux of S > 1 mJy: (115117, 119)\n"
+      "Total flux of S > 0.5 mJy: (239845, 119)\n"
      ]
     },
     {
@@ -111,7 +110,7 @@
      "text": [
       "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/fitsfunc.py:369: UserWarning: If you are not specifying the input dtype and using the default np.float64 dtype of read_map(), please consider that it will change in a future version to None as to keep the same dtype of the input file: please explicitly set the dtype if it is important to you.\n",
       "  \"If you are not specifying the input dtype and using the default \"\n",
-      "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/fitsfunc.py:391: UserWarning: NSIDE = 256\n",
+      "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/fitsfunc.py:391: UserWarning: NSIDE = 2048\n",
       "  warnings.warn(\"NSIDE = {0:d}\".format(nside))\n",
       "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/fitsfunc.py:400: UserWarning: ORDERING = RING in fits file\n",
       "  warnings.warn(\"ORDERING = {0:s} in fits file\".format(ordering))\n",
@@ -120,9 +119,7 @@
       "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/sphtfunc.py:824: UserWarning: Sigma is 0.000000 arcmin (0.000000 rad) \n",
       "  sigma * 60 * 180 / np.pi, sigma\n",
       "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/sphtfunc.py:829: UserWarning: -> fwhm is 0.000000 arcmin\n",
-      "  sigma * 60 * 180 / np.pi * (2.0 * np.sqrt(2.0 * np.log(2.0)))\n",
-      "/home/snakoneczny/tools/anaconda3/envs/py37_isw/lib/python3.7/site-packages/healpy/fitsfunc.py:391: UserWarning: NSIDE = 2048\n",
-      "  warnings.warn(\"NSIDE = {0:d}\".format(nside))\n"
+      "  sigma * 60 * 180 / np.pi * (2.0 * np.sqrt(2.0 * np.log(2.0)))\n"
      ]
     }
    ],
@@ -138,7 +135,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fa998123c3f4fb9896db92c0baca42b",
+       "model_id": "6ef9c3b1634d4bf19399bc5b5cfcd4eb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -152,7 +149,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9eee0dd0fac04338becb4b1d30e83037",
+       "model_id": "e4437db1c9c34492afe6c281e446110c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -409,7 +406,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
