new noise maps and SNR

--- a/notebooks/LoTSS_DR1.ipynb
+++ b/notebooks/LoTSS_DR1.ipynb
@@ -66,9 +66,10 @@
      "data": {
       "text/plain": [
        "{'lss_survey_name': 'LoTSS_DR1',\n",
-       " 'is_optical': True,\n",
-       " 'flux_min_cut': 0.5,\n",
+       " 'is_optical': False,\n",
        " 'nside': 512,\n",
+       " 'signal_to_noise': 0,\n",
+       " 'flux_min_cut': 0.5,\n",
        " 'z_tail': 2.0,\n",
        " 'bias': 2.1,\n",
        " 'scale_bias': True,\n",
@@ -100,8 +101,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Original LoTSS DR1 datashape: (318520, 119)\n",
-      "Total flux of S > 0.5 mJy: (239845, 119)\n"
+      "Original LoTSS DR1 datashape: (325694, 29)\n",
+      "Total flux of S > 0.5 mJy: (247088, 29)\n"
      ]
     },
     {
@@ -135,7 +136,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6ef9c3b1634d4bf19399bc5b5cfcd4eb",
+       "model_id": "d12ca050583f4562b1e118243a55cecf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -149,7 +150,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4437db1c9c34492afe6c281e446110c",
+       "model_id": "57b3b9c2fd0e402499cc06b6e21d41ab",
        "version_major": 2,
        "version_minor": 0
       },
