LoTSS DR2 notebook and tomographer refactor

--- a/notebooks/LoTSS_DR2_llhoods.ipynb
+++ b/notebooks/LoTSS_DR2_llhoods.ipynb
@@ -52,7 +52,10 @@
   {
    "cell_type": "markdown",
    "id": "8488c4ca-3bfa-4461-b53b-8d7f71d526dc",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# Subregions"
    ]
@@ -910,7 +913,10 @@
   {
    "cell_type": "markdown",
    "id": "8b669c05-df54-40ae-8300-b422c0c2c228",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "# gg vs gk"
    ]
